--- a/player/templates/player/base.html
+++ b/player/templates/player/base.html
@@ -10,19 +10,21 @@
 </head>
 <body>
     <div class="app-container">
-        <header class="app-header">
-            <div class="header-logo">
-                <p>bem-te-ouvi</p>
-            </div>
-            <div class="header-search">
-                <input type="search" placeholder="Buscar...">
-            </div>
-            <div class="header-user-actions">
-                <button class="login-btn">login</button>
-                <button class="signup-btn">cadastrar-se</button>
-                <div class="user-pic"></div>
-            </div>
-        </header>
+       <header class="app-header">
+    <div class="header-logo">
+        <img src="{% static 'player/imagens/Bird.png' %}" alt="Logo Bem-te-ouvi" class="logo-bird">
+        <p>Bem-te-ouvi</p>
+    </div>
+    <div class="header-search">
+        <i class="fas fa-search search-icon"></i>
+        <input type="search" placeholder="Pesquise por álbuns, músicas ou artistas...">
+    </div>
+    <div class="header-user-actions">
+        <button class="login-btn">login</button>
+        <button class="signup-btn">cadastrar-se</button>
+        <img src="{% static 'player/imagens/user.png' %}" alt="Perfil do Usuário" class="user-pic">
+    </div>
+</header>
 
         <aside class="app-sidebar">
             <nav>
