atualização do django

--- a/player/templates/player/letra.html
+++ b/player/templates/player/letra.html
@@ -25,6 +25,7 @@
             <p class="now-playing-text">TOCANDO AGORA</p>
             <h2 class="music-title"></h2>
             <h3 class="artist-name"></h3>
+             <a href="#" id="music-details-link" style="color: #94C0D3; margin-top: 10px; display: inline-block;">Ver Detalhes</a>
         </div>
     </div>
 
