--- a/player/templates/player/letra.html
+++ b/player/templates/player/letra.html
@@ -17,6 +17,17 @@
             </div>
         </div>
     </div>
+
+    <button id="open-lyrics-button" title="Ver Letra da Música">
+        <i class="fas fa-font"></i>
+    </button>
+
+    <div class="lyrics-section">
+        <div class="lyrics-actions">
+            <button class="action-button" id="close-lyrics-button" title="Fechar Letra"><i class="fas fa-times"></i></button>
+        </div>
+        <div class="lyrics-container"></div>
+    </div>
 {% endblock %}
 
 {% block player_content %}
