--- a/player/static/player/css/base.css
+++ b/player/static/player/css/base.css
@@ -58,6 +58,8 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-Left: 60; 
+
 }
 
 /* Estilos do Header */
@@ -84,8 +86,6 @@ aside nav a:hover { color: white; }
 /* =============================================== */
 /* 2. ESTILOS DO PLAYER DE MÚSICA                  */
 /* =============================================== */
-
-/* Parte visual que fica no 'main' */
 #main-music-container {
     position: relative;
     width: 100%;
@@ -93,7 +93,7 @@ aside nav a:hover { color: white; }
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; /* Centraliza a capa */
+    justify-content: center;
     padding: 2rem;
     background-size: cover;
     background-position: center;
@@ -125,8 +125,6 @@ aside nav a:hover { color: white; }
 .now-playing-text { font-size: 0.8rem; color: #b3b3b3; letter-spacing: 1px; }
 .music-title { font-size: 2rem; margin: 0.5rem 0; }
 .artist-name { font-size: 1.2rem; color: #b3b3b3; }
-
-/* Controles do Player que ficam no rodapé '#player' */
 .player-controls-bottom {
     width: 100%;
     max-width: 700px;
@@ -134,6 +132,7 @@ aside nav a:hover { color: white; }
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
+    margin: 30 auto;
 }
 .progress-bar-container { width: 100%; height: 0.3rem; background-color: #4d4d4d; border-radius: 25px; cursor: pointer; }
 .progress-bar-music { height: 100%; width: var(--progress-width, 0%); background-color: #fff; border-radius: 25px; }
