--- a/player/static/player/css/base.css
+++ b/player/static/player/css/base.css
@@ -58,8 +58,6 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-Left: 60; 
-
 }
 
 /* Estilos do Header */
@@ -132,7 +130,7 @@ aside nav a:hover { color: white; }
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
-    margin: 30 auto;
+    margin: 0 auto; /* Garante a centralização */
 }
 .progress-bar-container { width: 100%; height: 0.3rem; background-color: #4d4d4d; border-radius: 25px; cursor: pointer; }
 .progress-bar-music { height: 100%; width: var(--progress-width, 0%); background-color: #fff; border-radius: 25px; }
